--- a/src/css/common/header.css
+++ b/src/css/common/header.css
@@ -151,7 +151,7 @@
 }
 
 
-/* ----mobile menu----end 
+/* ----mobile menu----end  */
 
 @media screen and (max-width: 1439.98px) {
   .header-nav,
@@ -202,4 +202,4 @@
   .menu-toggle {
     display: none;
   }
-} */
+}
